feat: Add Dockerfile.dev

--- a/01_research_and_write_article/compose.yml
+++ b/01_research_and_write_article/compose.yml
@@ -4,7 +4,7 @@ services:
   crewai:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.dev
     volumes:
       - .:/code
     ports:
